// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
AmusementPark: Contains information about the amusement park.
CattleRide: Specific rides on real cows.
Cow: Includes each cow with a unique name.
CowRideParticipation: Links cows and cattle rides indicating which cows participate in which rides.
FoodStall: Details about food stalls operating within the park.
GamblingAttraction: Information on gambling attractions.
MedicalTreatment: Details on past medical treatments provided to any cow.
ParkVisitor: Information about visitors to the park.
Purchase: Record of purchases made within the park including rides and food.
Ride: Includes details about the various rides available in the park.
Staff: Details about the employees working in the park.
Ticket: Tickets issued for rides, food, gambling, and cattle rides.
'''
}

Table AmusementPark {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    }

Table CattleRide {
    id INTEGER [primary key]
    name VARCHAR 
    park_id INTEGER 
    difficulty_level VARCHAR 
    }

Table Cow {
    id INTEGER [primary key]
    name VARCHAR 
    breed VARCHAR 
    }

Table CowRideParticipation {
    id INTEGER [primary key]
    cow_id INTEGER 
    cattle_ride_id INTEGER 
    }

Table FoodStall {
    id INTEGER [primary key]
    name VARCHAR 
    park_id INTEGER 
    cuisine_type VARCHAR 
    }

Table GamblingAttraction {
    id INTEGER [primary key]
    name VARCHAR 
    park_id INTEGER 
    min_age INTEGER 
    }

Table MedicalTreatment {
    id INTEGER [primary key]
    cow_id INTEGER 
    treatment_date DATETIME 
    description VARCHAR 
    }

Table ParkVisitor {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    visit_date DATETIME 
    }

Table Purchase {
    id INTEGER [primary key]
    visitor_id INTEGER 
    total_amount FLOAT 
    purchase_date DATETIME 
    }

Table Ride {
    id INTEGER [primary key]
    name VARCHAR 
    park_id INTEGER 
    Type VARCHAR 
    description VARCHAR 
    }

Table Staff {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    role VARCHAR 
    park_id INTEGER 
    }

Table Ticket {
    id INTEGER [primary key]
    visitor_id INTEGER 
    ride_id INTEGER 
    food_stall_id INTEGER 
    cattle_ride_id INTEGER 
    purchase_datetime DATETIME 
    }



// Relationships
    Ref: CattleRide.(park_id) < AmusementPark.(id)
    Ref: CowRideParticipation.(cattle_ride_id) < CattleRide.(id)
    Ref: CowRideParticipation.(cow_id) < Cow.(id)
    Ref: FoodStall.(park_id) < AmusementPark.(id)
    Ref: GamblingAttraction.(park_id) < AmusementPark.(id)
    Ref: MedicalTreatment.(cow_id) < Cow.(id)
    Ref: Purchase.(visitor_id) < ParkVisitor.(id)
    Ref: Ride.(park_id) < AmusementPark.(id)
    Ref: Staff.(park_id) < AmusementPark.(id)
    Ref: Ticket.(cattle_ride_id) < CattleRide.(id)
    Ref: Ticket.(food_stall_id) < FoodStall.(id)
    Ref: Ticket.(ride_id) < Ride.(id)
    Ref: Ticket.(visitor_id) < ParkVisitor.(id)
